# langgraph-fastapi-boilerplate

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  logger.py  pyproject.toml  settings.py
app/: main.py
app/routers/: candidates.py  vectors.py
datasets/: candidate_cv.py  utils.py
evals/: candidate_scores.py
graphs/: candidate_scores.py
notebooks/: dev.ipynb
notebooks/data/cv/: cv_sample.txt
prompts/: candidate_scores.py
prompts/evals/: __init__.py  correctness.py
schemas/: candidate_scores.py
